@@ -1,3 +1,13 @@
+2007-05-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b64
+
+ * New: In Joomla! and Mambo you can now enter which userlevel
+        is allowed to create rootalbums.
+        Uninstall/install of component required.
+
+ * New: Method canCreateRootAlbum() for joomla/mambo user
+
+ * Change: Revert table name back to '#__gallery'
+
 2007-05-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b63
 
  * Change: Make breadcrumb a divset (instead of table)
